css/styles.css
body {
  font-family: system-ui, Arial, sans-serif;
  margin: 0;
  color: #232629;
  background-color: #f0f4f8;
}

nav {
  padding: 16px;
  margin-bottom: 12px;
  border-radius: 3px;
  border: 2px solid gray;
  background-color: rgb(224, 214, 203);
}

p {
  padding: 10px;
  margin: 10px;
}

footer {
  display: block;
  padding: 16px;
  margin-bottom: 12px;
  background-color:rgb(196, 172, 142);
  text-align: center;
  color: #7c5d5d;
  font-size: 0.95rem;
  font-weight: bold;
}


#header-id {
  display: flex;
  flex-direction: column;
  align-items: center ;
  padding: 10px;
  margin-bottom: 12px;
  background-color:rgb(196, 172, 142);
  color: #7c5d5d;
  border-radius: 3px;
  border: 3px solid rgb(165, 146, 146);
  text-align: center;
}

nav ul {
  list-style: none;
  display: flex;
  gap: 16px;
  justify-content: center;
  padding: 0;
  margin: 0;
}

nav a {
  text-decoration: none;
  font-weight: bold;
}

nav a:hover {
  text-decoration: underline;
}

main {
  display: flex;
  gap: 40px;
  max-width: 1200px;
  margin: 0 auto;
  padding: 10px;
  background: #f0f4f8;
}

article {
  flex: 2;
  background-color: #f0f4f8;
}
aside {
  flex: 1;
  background-color: #f0f4f8;
  border-radius: 8px;
  padding: 16px;
  border-radius: 10px;
  border: 2px solid rgb(165, 146, 146);
  vertical-align: middle;
}

aside input[type="image"] {
  display: block;
  margin: 0 auto;
  margin-top: 40px;
  cursor: pointer;
}



h1 {
  display: flex;
  border: 5px solid rgb(92, 69, 69);
  width: fit-content;
  margin: 0 auto;
  margin-top: 0.5rem;
  text-align: center;
  justify-content: center;
  border-radius: 10px;
  padding: 2% 2%;
  background-color: rgb(224, 214, 203);
  transition: 0.4s;
  font-size: 2rem;
  font-weight: bold;
}

h1:hover {
  transform: scale(1.15);
  text-decoration: underline;
}

#hombreTrabajandoEnPc {
  display: block;
  width: 4rem;
  height: 4rem;
  margin: 0 auto;
  transition: 0.4s ease;
}


#hombreTrabajandoEnPc:hover {
    transform: scale(1.15);
}

::selection {
  background-color: #5b93fb;
  color: black;
}

a:link {
  color: #5a5e66;
}

a:visited {
  color: rgb(47, 61, 61);
}

#enlaces-title {
  transition: 0.5s;
  margin-top: 1rem;
  margin-bottom: 2rem;
}

#enlaces-title:hover {
  font-style: italic;
}

#enlaces-title::before {
  content:"📌";
}

hr {
  width: 100%;
  height: 0.01rem;
  border: none;
  border-top: 1.9px solid #232629;
  margin: 20px 0;
}

#list-margin {
  margin-top: 2rem;
  margin-left: 2rem;
  margin-bottom: 2rem; 
}

#subtitle {
  display: inline-flex;
  align-items:center;
  justify-content: center;
  gap: 10px;
  margin-bottom: 3rem;
}

.icon {
  width: 95px;
  height: 60px;
}


#foto-perfil {
  display:block;
  width: 120px;    
  height: auto;
  margin: 0 auto;
  transition: 0.4s;
}

#foto-perfil:hover {
  transform: scale(1.15);
  border: 2px solid gray;
}


#about-me {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  padding: 1rem 1rem 2rem;
  display: flex;
  flex-direction: column;
  align-items:center;
  background-color: rgb(224, 214, 203);
  border-radius: 6px;
  border: 2px solid gray;
  width: 100%;
  box-sizing: border-box;
}

.visitar-sitio::after {
  content:"↗";

}

p + p {
  font-size: 18px;
  font-weight: bolder;
}

p .font-lighter {
  font-weight: normal;
}

.font-p {
  font-weight: bolder;
  display: flex;
  justify-content: center;
}

p::first-line {
  font-size: 110%;
  font-weight: bold;
}

article p {
  color:darkslategray;
}

h1, h2, h3
 {
  text-align: center;
  margin: 1rem 0;
 }



h2 {
  font-size: 1.5rem;
  font-weight: bold;
}

h3 {
  font-size: 1.25rem;
  font-weight: bold;
}

h4 {
  font-size: 1.1rem;
  font-weight: bold;
}


h2:hover, 
h3:hover,
h4:hover,
a:hover {
  color: rgb(179, 86, 86);
}

.bold {
  font-weight: bold;

}

header h3 {
  font-weight:500;
  font-style: italic;
}

.bold ~ p {
  font-weight: bold;
}

#interests-and-hobbies {
  margin-top: 2px;
}

article h2 {
  text-align: center;
}

article h2::after {
  content: "💼";
  margin-left: 10px;
}

#list-interests {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 1rem;
  margin: 0;
  pad: 0;
}


#enlaces-utiles {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0px;
  margin-top: 0px ;
  background-color: rgb(224, 214, 203);
  border: 2px solid gray;
  font-size: small;
}

#article-title {
    transition: 0.4s;
}

#article-title:hover {
  font-style: italic;
}

#paragraph {
  margin: 0.3rem;
  line-height: 1.30;
}

footer h2 {
  display: flex;
  justify-content: center;
  font-weight: bolder;
  padding: 0.5rem;
  align-items: center;
}

a[target="_blank"] {
  color: rgb(179, 86, 86);
}

@media (max-width: 768px) {
  main {
    flex-direction: column;
    gap: 20px;
  }

  nav ul {
    flex-direction: column;
    align-items: center;
  }

  #list-interests {
    flex-wrap: wrap;
    justify-content: center;
    gap: 1rem;
  }
 
  #about-me {
    width: 100%;
  }
}

* {
  box-sizing: border-box;
}

